# phabricator-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start.py
.github/workflows/: ci.yml
examples/: README.md  demo_enhanced_comments.py
scripts/: README.md  fetch_revision_web.py
src/core/: __init__.py  client.py  client_manager.py  enhanced_client.py  enhanced_formatters.py  formatters.py  models.py  phabricator_compat.py
src/servers/: __init__.py  http_server.py  stdio_server.py
src/tests/: __init__.py  conftest.py
